feat: navigation implemented

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,15 @@
-<p>navbar works!</p>
+<div class="h-12 bg-black w-full flex items-center justify-between p-2">
+  <div>
+    <img src="/threads.png" class="h-10" alt="" />
+  </div>
+  <nav>
+    <ul class="flex gap-4 text-white text-sm">
+      <li>
+        <a routerLink="/">Home</a>
+      </li>
+      <li>
+        <a routerLink="/about">About</a>
+      </li>
+    </ul>
+  </nav>
+</div>
