--- a/src/app/layouts/default/default.component.html
+++ b/src/app/layouts/default/default.component.html
@@ -1,6 +1,7 @@
 <div class="class min-h-screen flex flex-col">
 
     <header>
+        <app-navbar></app-navbar>
         <nav>
             This is the nave
         </nav>
