fix: home navigation fix

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <nav>
     <ul class="flex gap-4 text-white text-sm">
       <li>
-        <a routerLink="/">Home</a>
+        <a routerLink="/home">Home</a>
       </li>
       <li>
         <a routerLink="/about">About</a>
