feat: Implement comment UI

--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,1 +1,155 @@
-<p>comment works!</p>
+<section class="bg-white dark:bg-gray-900 py-8 lg:py-16 antialiased">
+  <div class="max-w-2xl mx-auto px-4">
+    <article
+      class="p-6 text-base bg-white rounded-lg dark:bg-gray-900 border border-slate-700"
+    >
+      <footer class="flex justify-between items-center mb-2">
+        <div class="flex items-center">
+          <p
+            class="inline-flex items-center mr-3 text-sm text-gray-900 dark:text-white font-semibold"
+          >
+            <img
+              class="mr-2 w-6 h-6 rounded-full"
+              src="https://flowbite.com/docs/images/people/profile-picture-2.jpg"
+              alt="Michael Gough"
+            />{{ comment.user.name }}
+          </p>
+          <p class="text-sm text-gray-600 dark:text-gray-400">
+            <time pubdate datetime="2022-02-08" title="February 8th, 2022"
+              >Feb. 8, 2022</time
+            >
+          </p>
+        </div>
+        <button
+          id="dropdownComment1Button"
+          data-dropdown-toggle="dropdownComment1"
+          class="inline-flex items-center p-2 text-sm font-medium text-center text-gray-500 dark:text-gray-400 bg-white rounded-lg hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-50 dark:bg-gray-900 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+          type="button"
+        >
+          <svg
+            class="w-4 h-4"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 16 3"
+          >
+            <path
+              d="M2 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm6.041 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM14 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Z"
+            />
+          </svg>
+          <span class="sr-only">Comment settings</span>
+        </button>
+        <!-- Dropdown menu -->
+        <div
+          id="dropdownComment1"
+          class="hidden z-10 w-36 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600"
+        >
+          <ul
+            class="py-1 text-sm text-gray-700 dark:text-gray-200"
+            aria-labelledby="dropdownMenuIconHorizontalButton"
+          >
+            <li>
+              <a
+                href="#"
+                class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+                >Edit</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+                >Remove</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+                >Report</a
+              >
+            </li>
+          </ul>
+        </div>
+      </footer>
+      <p class="text-gray-500 dark:text-gray-400">
+        {{ comment.text }}
+      </p>
+      <div class="flex items-center mt-4 space-x-4">
+        <button
+          type="button"
+          (click)="toggleIsReplying()"
+          class="flex items-center text-sm text-gray-500 hover:underline dark:text-gray-400 font-medium"
+        >
+          <svg
+            class="mr-1.5 w-3.5 h-3.5"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 20 18"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M5 5h5M5 8h2m6-3h2m-5 3h6m2-7H2a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h3v5l5-5h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1Z"
+            />
+          </svg>
+          Reply
+        </button>
+        <button
+          type="button"
+          class="flex gap-1 items-center text-sm text-gray-500 hover:underline dark:text-gray-400 font-medium"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M6.633 10.25c.806 0 1.533-.446 2.031-1.08a9.041 9.041 0 0 1 2.861-2.4c.723-.384 1.35-.956 1.653-1.715a4.498 4.498 0 0 0 .322-1.672V2.75a.75.75 0 0 1 .75-.75 2.25 2.25 0 0 1 2.25 2.25c0 1.152-.26 2.243-.723 3.218-.266.558.107 1.282.725 1.282m0 0h3.126c1.026 0 1.945.694 2.054 1.715.045.422.068.85.068 1.285a11.95 11.95 0 0 1-2.649 7.521c-.388.482-.987.729-1.605.729H13.48c-.483 0-.964-.078-1.423-.23l-3.114-1.04a4.501 4.501 0 0 0-1.423-.23H5.904m10.598-9.75H14.25M5.904 18.5c.083.205.173.405.27.602.197.4-.078.898-.523.898h-.908c-.889 0-1.713-.518-1.972-1.368a12 12 0 0 1-.521-3.507c0-1.553.295-3.036.831-4.398C3.387 9.953 4.167 9.5 5 9.5h1.053c.472 0 .745.556.5.96a8.958 8.958 0 0 0-1.302 4.665c0 1.194.232 2.333.654 3.375Z"
+            />
+          </svg>
+
+          Like
+        </button>
+        <button
+          type="button"
+          (click)="toggleIsExpanded()"
+          class="flex items-center text-sm text-gray-500 hover:underline dark:text-gray-400 font-medium"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6 duration-200"
+            [class.rotate-180]="isExpanded()"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m19.5 8.25-7.5 7.5-7.5-7.5"
+            />
+          </svg>
+        </button>
+      </div>
+      @if (isReplying()) {
+      <app-comment-form />
+      } @if (isExpanded()) { 
+        @for (nestedComment of nestedComments(); track
+      $index) {
+      <app-comment [comment]="nestedComment" />
+      } } @if (!nestedComments().length && isExpanded()) {
+      <p class="text-gray-500 mt-2">No comment yet 😒</p>
+      }
+    </article>
+  </div>
+</section>
