--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="h-12 bg-black w-full flex items-center justify-between p-2">
+<div class="h-12 bg-gray-800 w-full flex items-center justify-between p-2">
   <div>
     <img src="/threads.png" class="h-10" alt="" />
   </div>
