feat: comment integration to home component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<main>
+    @for (comment of comments(); track $index) {        
+        <app-comment [comment]="comment"></app-comment>
+    }
+</main>
