fix: remove placeholder

--- a/src/app/layouts/default/default.component.html
+++ b/src/app/layouts/default/default.component.html
@@ -1,10 +1,7 @@
-<div class="class min-h-screen flex flex-col">
+<div class="min-h-screen flex flex-col bg-gray-900">
 
     <header>
         <app-navbar></app-navbar>
-        <nav>
-            This is the nave
-        </nav>
     </header>
     <main>
         <router-outlet></router-outlet>
