--- a/src/app/components/comment-form/comment-form.component.html
+++ b/src/app/components/comment-form/comment-form.component.html
@@ -1,12 +1,21 @@
-<form class="mt-6">
-    <div class="py-2 px-4 mb-4 bg-white rounded-lg rounded-t-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700">
-        <label for="comment" class="sr-only">Your comment</label>
-        <textarea id="comment" rows="6"
-            class="px-0 w-full text-sm text-gray-900 border-0 focus:ring-0 focus:outline-none dark:text-white dark:placeholder-gray-400 dark:bg-gray-800"
-            [placeholder]="placeholder" required></textarea>
-    </div>
-    <button type="submit"
-        class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800">
-        {{buttonText}}
-    </button>
+<form class="mt-6" (submit)="formSubmit($event)">
+  <div
+    class="py-2 px-4 mb-4 bg-white rounded-lg rounded-t-lg border border-gray-200 dark:bg-gray-800 dark:border-gray-700"
+  >
+    <label for="comment" class="sr-only">Your comment</label>
+    <textarea
+      id="comment"
+      rows="6"
+      name="commentText"
+      class="px-0 w-full text-sm text-gray-900 border-0 focus:ring-0 focus:outline-none dark:text-white dark:placeholder-gray-400 dark:bg-gray-800"
+      [placeholder]="placeholder"
+      required
+    ></textarea>
+  </div>
+  <button
+    type="submit"
+    class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800"
+  >
+    {{ buttonText }}
+  </button>
 </form>
